--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "electron-safe-ipc": "^0.6.1",
     "exec": "^0.2.1",
-    "fs-jetpack": "^0.7.0"
+    "file-encryptor": "^0.1.0",
+    "fs-extra": "^0.24.0",
+    "fs-jetpack": "^0.7.0",
+    "request": "^2.63.0",
+    "unzip": "^0.1.11"
   }
 }
