--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "fs-extra": "^0.24.0",
     "fs-jetpack": "^0.7.0",
     "request": "^2.63.0",
+    "sudo-prompt": "^1.1.7",
     "unzip": "^0.1.11"
   }
 }
