Moved version check to depend on package.json instead of config values.

--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,12 @@
   "productName": "DriveShare",
   "identifier": "com.storj.driveshare",
   "description": "",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "Storj",
   "main": "main.js",
   "config": {
-    "target": "development"
+    "target": "development",
+    "versionCheckURL": "https://raw.githubusercontent.com/Storj/driveshare-gui/master/app/package.json"
   },
   "dependencies": {
     "electron-safe-ipc": "^0.6.1",
