Fixed issue 38: Invalid Directory on Windows.

--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "productName": "DriveShare",
   "identifier": "com.storj.driveshare",
   "description": "",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "author": "Storj",
   "main": "main.js",
   "config": {
@@ -11,7 +11,7 @@
     "versionCheckURL": "https://raw.githubusercontent.com/Storj/driveshare-gui/master/app/package.json"
   },
   "dependencies": {
-    "diskspace": "^0.1.7",
+    "diskspace": "ganna-shmatova/diskspace.js",
     "electron-safe-ipc": "^0.6.1",
     "file-encryptor": "^0.1.0",
     "fs-extra": "^0.24.0",
