--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "release": "./node_modules/.bin/gulp release --env=production",
     "start": "node ./tasks/start",
     "test": "node ./tasks/start --env=test"
+  },
+  "dependencies": {
+    "async": "^1.5.0"
   }
 }
