--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "test": "node ./tasks/start --env=test"
   },
   "dependencies": {
-    "async": "^1.5.0"
+    "async": "^1.5.0",
+    "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4",
+    "ladda": "^0.9.8"
   }
 }
