refactor updater, logger, add jshintrc, remove submlime config - keep that shit out of here or gitignore it

--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
+    "async": "^1.5.0",
+    "bootstrap": "^3.3.6",
     "diskspace": "keverw/diskspace.js",
     "electron-safe-ipc": "^0.6.1",
     "file-encryptor": "^0.1.0",
     "fs-extra": "^0.24.0",
     "fs-jetpack": "^0.7.0",
+    "jquery": "^2.1.4",
+    "ladda": "^0.9.8",
     "request": "^2.63.0",
     "sudo-prompt": "^1.1.7"
   }
