--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "DriveShare",
   "productName": "DriveShare",
   "identifier": "com.storj.driveshare",
-  "description": "Earn money by sharing your extra hard drive space",
+  "description": "Earn money by sharing your extra processing power",
   "version": "0.3.4",
   "author": "Storj",
   "main": "main.js",
