--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "asar": "^0.7.2",
+    "chai": "^3.4.1",
+    "electron-mocha": "^0.6.3",
     "electron-prebuilt": "^0.32.2",
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
@@ -9,6 +11,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
     "q": "^1.4.1",
+    "sinon": "^1.17.2",
     "tree-kill": "^0.1.1",
     "yargs": "^3.15.0"
   },
@@ -22,7 +25,9 @@
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
     "start": "node ./tasks/start",
-    "test": "node ./tasks/start --env=test"
+    "test": "npm run test-unit && npm run test-integration",
+    "test-unit": "./node_modules/.bin/electron-mocha app/test/unit/**",
+    "test-integration": "./node_modules/.bin/electron-mocha --renderer app/test/integration/**"
   },
   "dependencies": {
     "async": "^1.5.0",
