--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: node_js
 node_js:
   - "4.2.2"
+after_script:
+  - npm run coverage-unit
+  - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
