add updater tests, add license and repo to package.json, do not expose singleton from updater

--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "fs-jetpack": "^0.7.0",
     "jquery": "^2.1.4",
     "request": "^2.63.0",
+    "semver": "^5.1.0",
     "vue": "^1.0.10"
   }
 }
