--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "4.2.2"
 after_script:
-  - npm run coverage-unit
+  - npm run coverage-travis
   - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
 sudo: false
