--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "asar": "^0.7.2",
     "chai": "^3.4.1",
     "coveralls": "^2.11.4",
-    "electron-mocha": "^0.6.3",
     "electron-prebuilt": "^0.32.2",
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
@@ -12,6 +11,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
     "istanbul": "^0.4.1",
+    "mocha": "^2.3.4",
     "proxyquire": "^1.7.3",
     "q": "^1.4.1",
     "sinon": "^1.17.2",
@@ -28,11 +28,10 @@
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
     "start": "node ./tasks/start",
-    "test": "npm run test-unit && npm run test-integration",
-    "test-unit": "./node_modules/.bin/electron-mocha app/test/unit/**",
-    "test-integration": "./node_modules/.bin/electron-mocha --renderer app/test/integration/**",
-    "coverage-travis": "./node_modules/.bin/istanbul cover ./node_modules/electron-mocha/node_modules/.bin/_mocha app/test/unit/** -- --recursive",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha app/test/unit/** -- --recursive"
+    "test": "npm run test-unit",
+    "test-unit": "./node_modules/.bin/mocha ./app/test/unit/**",
+    "coverage-travis": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive"
   },
   "dependencies": {
     "async": "^1.5.0",
