--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ after_script:
   - npm run coverage-travis
   - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
 sudo: false
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
