--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "asar": "^0.7.2",
     "chai": "^3.4.1",
     "coveralls": "^2.11.4",
+    "electron-mocha": "^0.6.3",
     "electron-prebuilt": "^0.32.2",
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
@@ -28,8 +29,9 @@
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
     "start": "node ./tasks/start",
-    "test": "npm run test-unit",
-    "test-unit": "./node_modules/.bin/mocha ./app/test/unit/**",
+    "test": "npm run test-unit && npm run test-integration",
+    "test-unit": "./node_modules/.bin/electron-mocha ./app/test/unit/**",
+    "test-integration": "./node_modules/.bin/electron-mocha --renderer ./app/test/integration/**",
     "coverage-travis": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive"
   },
