--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
     "start": "node ./tasks/start",
-    "test": "npm run test-unit && npm run test-integration",
-    "test-unit": "./node_modules/.bin/electron-mocha ./app/test/unit/**",
-    "test-integration": "./node_modules/.bin/electron-mocha --renderer ./app/test/integration/**",
-    "coverage-travis": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive",
+    "test": "npm run test-unit",
+    "test-unit": "./node_modules/.bin/mocha ./app/test/unit/**",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive"
   },
   "dependencies": {
