--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
   "main": "main.js",
   "config": {
     "target": "development",
-    "versionCheckURL": "https://raw.githubusercontent.com/Storj/driveshare-gui/master/app/package.json"
+    "versionCheckURL": "https://api.github.com/repos/Storj/driveshare-gui/releases"
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
@@ -17,10 +17,11 @@
     "diskspace": "keverw/diskspace.js",
     "electron-safe-ipc": "^0.6.1",
     "fs-extra": "^0.24.0",
-    "fs-jetpack": "^0.7.0",
     "jquery": "^2.1.4",
     "request": "^2.63.0",
     "semver": "^5.1.0",
     "vue": "^1.0.10"
-  }
+  },
+  "license": "MIT",
+  "repository": "https://github.com/storj/driveshare-gui"
 }
