--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
   "config": {
     "target": "development",
     "versionCheckURL": "https://api.github.com/repos/Storj/farmer-gui/releases",
-    "speedTestURL": ""
+    "speedTestURL": "ws://speedofme.storj.io"
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
@@ -23,7 +23,7 @@
     "mkdirp": "^0.5.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "speedofme": "^1.0.0",
+    "speedofme": "^1.0.1",
     "storj-farmer": "^1.0.3",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
