try to flatten the dependency tree

--- a/app/package.json
+++ b/app/package.json
@@ -19,12 +19,13 @@
     "diskspace": "keverw/diskspace.js",
     "fs-extra": "^0.24.0",
     "jquery": "^2.1.4",
+    "jsen": "^0.6.1",
     "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
     "speedofme": "^1.0.1",
-    "storj-farmer": "^1.0.3",
+    "storj-farmer": "^1.0.4",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
     "winreg": "0.0.15"
