upgrade to latest storj/core to use abstract FarmerFactory interface

--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
     "request": "^2.63.0",
     "semver": "^5.1.0",
     "speedofme": "^1.0.1",
-    "storj-farmer": "^1.0.4",
+    "storj": "^0.5.2",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
     "winreg": "0.0.15"
