--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "rcedit": "^0.3.0"
   },
   "scripts": {
-    "postinstall": "node ./tasks/app_npm_install && flatten-packages app",
+    "postinstall": "node ./tasks/app_npm_install",
     "app-install": "node ./tasks/app_npm_install",
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
