bugfix linux symlink
https://github.com/Storj/farmer-gui/issues/217

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storj-farmer-gui",
+  "name": "storjshare",
   "productName": "Storj Share",
   "identifier": "com.storj.farmer",
   "description": "Earn money by sharing your extra hard drive space",
