--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "productName": "Storj Share",
   "identifier": "com.storj.farmer",
   "description": "Earn money by sharing your extra hard drive space",
-  "version": "0.7.5",
+  "version": "0.8.0",
   "author": "Storj <hello@storj.io>",
   "main": "main.js",
   "config": {
@@ -16,7 +16,7 @@
     "applescript": "^1.0.0",
     "async": "^1.5.0",
     "bootstrap": "^3.3.6",
-    "diskspace": "keverw/diskspace.js",
+    "fd-diskspace": "^1.0.0",
     "fs-extra": "^0.24.0",
     "jquery": "^2.1.4",
     "jsen": "^0.6.1",
