--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "rcedit": "^0.3.0"
   },
   "scripts": {
-    "postinstall": "node ./tasks/app_npm_install && cd ./app/node_modules/storj/node_modules/leveldown && env HOME=~/.electron-gyp && node-gyp rebuild --target=0.36.12 --arch=x64 --dist-url=https://atom.io/download/atom-shell",
+    "postinstall": "node ./tasks/app_npm_install && cd ./app/node_modules/storj/node_modules/leveldown && node-gyp rebuild --target=0.36.12 --dist-url=https://atom.io/download/atom-shell",
     "app-install": "node ./tasks/app_npm_install",
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
