--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "4.2.2"
+before_script:
+  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 after_script:
   - npm run coverage
   - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
