--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "asar": "^0.7.2",
     "chai": "^3.4.1",
     "coveralls": "^2.11.4",
-    "electron-mocha": "^0.6.3",
-    "electron-prebuilt": "^0.36.0",
+    "electron-prebuilt": "1.2.6",
     "flatten-packages": "^0.1.4",
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
@@ -26,14 +25,18 @@
     "rcedit": "^0.3.0"
   },
   "scripts": {
-    "postinstall": "node ./tasks/app_npm_install && cd ./app/node_modules/storj/node_modules/leveldown && node-gyp rebuild --target=0.36.12 --dist-url=https://atom.io/download/atom-shell",
+    "postinstall": "node ./tasks/app_npm_install && cd ./app/node_modules/storj/node_modules/leveldown && node-gyp rebuild --target=1.2.6 --dist-url=https://atom.io/download/atom-shell",
     "app-install": "node ./tasks/app_npm_install",
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
     "start": "node ./tasks/start",
-    "test": "npm run test-unit && npm run jshint",
-    "test-unit": "./node_modules/.bin/mocha ./app/test/unit/**",
+    "test": "npm run test-unit && npm run test-integration && npm run jshint",
+    "test-unit": "ELECTRON_PATH=./node_modules/.bin/electron ./node_modules/.bin/electron-mocha ./app/test/unit/**",
+    "test-integration": "ELECTRON_PATH=./node_modules/.bin/electron ./node_modules/.bin/electron-mocha --renderer ./app/test/integration/**",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./app/test/unit/** -- --recursive",
     "jshint": "./node_modules/.bin/jshint --config .jshintrc --exclude ./app/node_modules ./app"
+  },
+  "dependencies": {
+    "electron-mocha": "^2.3.0"
   }
 }
