--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "asar": "^0.7.2",
     "chai": "^3.4.1",
     "coveralls": "^2.11.4",
-    "electron-prebuilt": "1.2.6",
+    "electron-prebuilt": "=1.2.6",
     "electron-mocha": "^2.3.0",
     "flatten-packages": "^0.1.4",
     "fs-jetpack": "^0.7.0",
