--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,7 @@
     "myspeed": "^1.0.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "*",
+    "storj-lib": "^4.0.0",
     "storj-telemetry-reporter": "Storj/telemetry-reporter",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
