fix transitioning logic

--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
     "request": "^2.63.0",
     "semver": "^5.1.0",
     "storj-lib": "^4.0.0",
-    "storj-telemetry-reporter": "Storj/telemetry-reporter",
+    "storj-telemetry-reporter": "^2.0.0",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
     "winreg": "0.0.15"
