Shuffle the seeds when nothing happens for 30 minutes

--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "jquery": "^2.1.4",
     "jsen": "^0.6.1",
     "kad-logger-json": "^0.1.2",
+    "knuth-shuffle": "^1.0.1",
     "leveldown": "^1.4.6",
     "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
