--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "jquery": "^2.1.4",
     "jsen": "^0.6.1",
     "kad-logger-json": "^0.1.2",
+    "kfs": "^2.2.4",
     "knuth-shuffle": "^1.0.1",
     "leveldown": "^1.4.6",
     "merge": "^1.2.0",
@@ -29,7 +30,7 @@
     "myspeed": "^1.0.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "^4.0.3",
+    "storj-lib": "^4.0.4",
     "storj-telemetry-reporter": "^2.0.0",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
