--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,7 @@
     "myspeed": "^1.0.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "^6.0.11",
+    "storj-lib": "littleskunk/core#upnp",
     "storj-telemetry-reporter": "^4.0.0",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
