--- a/app/package.json
+++ b/app/package.json
@@ -3,21 +3,17 @@
   "productName": "Storj Share",
   "identifier": "com.storj.farmer",
   "description": "Storj Share GUI",
-  "version": "4.0.8",
+  "version": "5.0.0",
   "author": "Storj <alex@storj.io>",
   "main": "main.js",
   "config": {
-    "target": "development",
-    "versionCheckURL": "https://api.github.com/repos/Storj/storjshare-gui/releases",
-    "speedTestURL": "ws://speedofme.storj.io"
+    "versionCheckURL": "https://api.github.com/repos/Storj/storjshare-gui/releases"
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
     "applescript": "^1.0.0",
     "async": "^1.5.0",
     "bootstrap": "^3.3.6",
-    "du": "^0.1.0",
-    "fd-diskspace": "littleskunk/fd-diskspace",
     "fs-extra": "^0.24.0",
     "graceful-fs": "^4.1.9",
     "jquery": "^2.1.4",
@@ -27,7 +23,6 @@
     "leveldown": "^1.4.6",
     "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "myspeed": "^1.0.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
     "storj-lib": "^6.0.11",
