--- a/app/package.json
+++ b/app/package.json
@@ -6,27 +6,19 @@
   "version": "5.0.0",
   "author": "Storj <alex@storj.io>",
   "main": "main.js",
-  "config": {
-    "versionCheckURL": "https://api.github.com/repos/Storj/storjshare-gui/releases"
-  },
   "dependencies": {
-    "adm-zip": "^0.4.7",
     "applescript": "^1.0.0",
     "async": "^1.5.0",
     "bootstrap": "^3.3.6",
-    "fs-extra": "^0.24.0",
-    "graceful-fs": "^4.1.9",
+    "dnode": "^1.2.2",
     "jquery": "^2.1.4",
-    "jsen": "^0.6.1",
-    "kad-logger-json": "^0.1.2",
-    "knuth-shuffle": "^1.0.1",
-    "leveldown": "^1.4.6",
+    "marked": "^0.3.6",
     "merge": "^1.2.0",
-    "mkdirp": "^0.5.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "^6.0.11",
+    "storj-lib": "^6.0.12",
     "storj-telemetry-reporter": "^4.0.0",
+    "storjshare-daemon": "^2.0.4",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
     "winreg": "0.0.15"
