--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "productName": "Storj Share",
   "identifier": "com.storj.farmer",
   "description": "Storj Share GUI",
-  "version": "4.0.8",
+  "version": "4.0.9",
   "author": "Storj <alex@storj.io>",
   "main": "main.js",
   "config": {
@@ -17,7 +17,7 @@
     "async": "^1.5.0",
     "bootstrap": "^3.3.6",
     "du": "^0.1.0",
-    "fd-diskspace": "littleskunk/fd-diskspace",
+    "fd-diskspace": "git+https://github.com/littleskunk/fd-diskspace#2866a4cf147649d97f81fb33464bcbf0f8176bd5",
     "fs-extra": "^0.24.0",
     "graceful-fs": "^4.1.9",
     "jquery": "^2.1.4",
@@ -30,7 +30,7 @@
     "myspeed": "^1.0.1",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "^6.0.11",
+    "storj-lib": "^6.0.15",
     "storj-telemetry-reporter": "^4.0.0",
     "untildify": "^2.1.0",
     "vue": "^1.0.10",
