--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "applescript": "^1.0.0",
     "async": "^1.5.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-vue": "^0.9.5",
     "dnode": "^1.2.2",
     "marked": "^0.3.6",
     "merge": "^1.2.0",
