--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "semver": "^5.1.0",
     "storj-lib": "^6.3.0",
     "storjshare-daemon": "^2.5.0",
+    "strip-json-comments": "^2.0.1",
     "tether": "^1.4.0",
     "untildify": "^2.1.0",
     "vue": "^2.1.10",
