--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "async": "^1.5.0",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-vue": "^0.10.2",
+    "bytes": "^2.5.0",
     "dnode": "^1.2.2",
     "merge": "^1.2.0",
     "pretty-ms": "^2.1.0",
