adding testnet & dev tools to start script

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "app-install": "node ./tasks/app_npm_install",
     "build": "./node_modules/.bin/gulp build",
     "release": "./node_modules/.bin/gulp release --env=production",
-    "start": "node ./tasks/start",
+    "start": "NODE_ENV=dev node ./tasks/start",
     "test": "npm run test-unit && npm run test-integration && npm run jshint",
     "test-unit": "ELECTRON_PATH=./node_modules/.bin/electron ./node_modules/.bin/electron-mocha ./app/test/unit/**",
     "test-integration": "ELECTRON_PATH=./node_modules/.bin/electron ./node_modules/.bin/electron-mocha --renderer ./app/test/integration/**",
