--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "storjshare",
   "productName": "Storj Share",
+  "publisher": "Storj Labs Inc.",
   "identifier": "com.storj.farmer",
   "description": "Storj Share GUI",
   "version": "5.0.0",
