--- a/resources/linux/DEBIAN/control
+++ b/resources/linux/DEBIAN/control
@@ -2,6 +2,6 @@ Package: {{name}}
 Version: {{version}}
 Maintainer: {{author}}
 Priority: optional
-Architecture: amd64
+Architecture: {{arch}}
 Installed-Size: {{size}}
 Description: {{description}}
