point to published storj-lib and storjshare-daemon

--- a/app/package.json
+++ b/app/package.json
@@ -18,9 +18,9 @@
     "pretty-ms": "^2.1.0",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "bookchin/storj-core#feature/contact-in-offer",
+    "storj-lib": "^6.5.0",
     "storj-telemetry-reporter": "^4.0.0",
-    "storjshare-daemon": "bookchin/storjshare-daemon#master",
+    "storjshare-daemon": "^3.1.0",
     "strip-json-comments": "^2.0.1",
     "untildify": "^2.1.0",
     "vue": "^2.2.5",
