--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
     "applescript": "^1.0.0",
     "async": "^1.5.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "bootstrap-vue": "^0.12.0",
+    "bootstrap-vue": "^1.0.0-beta.7",
     "bytes": "^2.5.0",
     "dnode": "^1.2.2",
     "merge": "^1.2.0",
@@ -19,7 +19,7 @@
     "request": "^2.63.0",
     "semver": "^5.1.0",
     "storj-lib": "^7.0.2",
-    "storjshare-daemon": "^3.5.5",
+    "storjshare-daemon": "aleitner/storjshare-daemon",
     "strip-json-comments": "^2.0.1",
     "untildify": "^2.1.0",
     "vue": "^2.2.5",
