--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,8 @@
     "pretty-ms": "^2.1.0",
     "request": "^2.63.0",
     "semver": "^5.1.0",
-    "storj-lib": "^7.0.2",
-    "storjshare-daemon": "4.0.2-beta.1",
+    "storj-lib": "^8.0.0",
+    "storjshare-daemon": "^5.0.0",
     "strip-json-comments": "^2.0.1",
     "untildify": "^2.1.0",
     "vue": "^2.2.5",
